<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/login_box"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signUp"
            android:textSize="24sp"
            android:textColor="#000"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/fullNameSignUp"
            android:hint="@string/fullName"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:id="@+id/emailSignUp"
            android:hint="@string/hintEmail"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:id="@+id/phoneNumSignUp"
            android:hint="@string/hintPhoneNumber"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/usernameSignUp"
            android:hint="@string/loginUsernameHint"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/passwordSignUp"
            android:hint="@string/loginPasswordHint"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            />
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="40dp"
            android:text="@string/signUp"
            android:onClick="onSubmit"

            />



    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>