<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/login_box"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textSize="24sp"

            android:textColor = "#FFF"

            android:textStyle="bold"
             />

        <EditText
            android:id="@+id/emailLogin"
            android:hint="@string/hintEmail"
            android:textColorHint="#FFF"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFF"
            />

        <EditText
            android:id="@+id/passwordSignUp"
            android:textColorHint="#FFF"
            android:hint="@string/loginPasswordHint"
            android:backgroundTint="#FFF"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/login"
            android:background="@drawable/btn_rounded"
            android:layout_marginTop="30sp"
            />

        <TextView
            android:id="@+id/toSignUpPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/signUpOption"
            android:textColor="#0d89d6"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            />

    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>