<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MSettings"
    android:background="@color/logoColor"
    >

    <TextView
        android:id="@+id/mSettingsFragmentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/iconSettings"
        android:textAlignment="center"
        android:textSize="28sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/SplitLine_hor1"
        android:layout_width="match_parent"
        android:layout_height= "2dp"
        android:background="#000"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/mSettingsFragmentTitle"/>



    <TextView
        android:id="@+id/mTextPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/period"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SplitLine_hor1" />

    <Spinner
        android:id="@+id/mSpinnerPeriod"
        android:layout_width="153dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTextPeriod" />

    <TextView
        android:id="@+id/mNumWarningsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:maxWidth="300dp"
        android:text="@string/numWarnings"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mSpinnerPeriod" />




    <Spinner
        android:id="@+id/mSpinnerInterval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mNumWarningsTextView"
        android:layout_width="153dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintHorizontal_bias="0.108"
        />

    <Button
        android:id="@+id/mStatusChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/submit"
        android:onClick="onSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mSpinnerInterval"
        />


</androidx.constraintlayout.widget.ConstraintLayout>