<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    >

    <TextView
        android:id="@+id/settingsFragmentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/iconSettings"
        android:textAlignment="center"
        android:textSize="28sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/SplitLine_hor1"
        android:layout_width="match_parent"
        android:layout_height= "2dp"
        android:background="#000"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/settingsFragmentTitle"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/period"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SplitLine_hor1" />

    <Spinner
        android:id="@+id/spinnerPeriod"
        android:layout_width="153dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/numWarningsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:maxWidth="300dp"
        android:text="@string/numWarnings"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPeriod" />



    <Spinner
        android:id="@+id/spinnerInterval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numWarningsTextView"
        android:layout_width="153dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintHorizontal_bias="0.108"
        />

    <Button
        android:id="@+id/statusChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_rounded"
        android:minWidth="120dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerInterval"
        app:layout_constraintVertical_bias="0.74" />


</androidx.constraintlayout.widget.ConstraintLayout>